tests/ui/cve_2020_25016/cve_2020_25016.stderr
error: it is unsound to cast any type to a slice
  --> tests/ui/cve_2020_25016/cve_2020_25016.rs:12:1
   |
LL |   pub trait ComponentBytes<T: Copy + Send + Sync + 'static>
   |   ^  - help: change this trait to an `unsafe` trait: `unsafe`
   |  _|
   | |
LL | | where
LL | |     Self: ComponentSlice<T>,
LL | | {
...  |
LL | |     fn as_bytes(&self) -> &[u8] {
   | |     --------------------------- method `as_bytes` casts `&self` to `&[u8]`
...  |
LL | |     fn as_bytes_mut(&mut self) -> &mut [u8] {
   | |     --------------------------------------- method `as_bytes_mut` casts `&mut self` to `&mut [u8]`
...  |
LL | |     }
LL | | }
   | |_^

error: aborting due to 1 previous error

